--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,12 @@ SIDEBAR
     width: 80%;
 }
 
+#sidebar .logo:hover {
+    cursor: pointer;
+    filter: brightness(0) saturate(100%) invert(69%) sepia(28%) saturate(1163%) hue-rotate(86deg) brightness(94%) contrast(92%);
+}
+
+
 .logo-small {
     display: none;
 }
@@ -241,11 +247,11 @@ SIDEBAR
     position: relative;
 }
 
-.sidebar-nav li input:checked ~ label {
+.sidebar-nav li input:checked~label {
     color: var(--color-light);
 }
 
-.sidebar-nav li input:checked ~ label::before {
+.sidebar-nav li input:checked~label::before {
     position: absolute;
     content: "";
     display: block;
@@ -388,10 +394,11 @@ main .main-content {
 
 
 
-.main-content .main-nav li input:checked ~ label {
+.main-content .main-nav li input:checked~label {
     color: var(--color-light);
 }
-.main-content .main-nav li input:checked ~ label::after{
+
+.main-content .main-nav li input:checked~label::after {
     position: absolute;
     display: block;
     content: "";
@@ -556,9 +563,11 @@ MEDIA QUERIES
     .main-content .main-nav {
         font-size: 90%;
     }
+
     .main-content .card-list {
         gap: var(--gap-md);
     }
+
     /* ridimensiono larghezza delle cards per farcene stare 4 */
     .main-content .card {
         width: calc((100% - (3 * var(--gap-md))) / 4);
@@ -585,6 +594,7 @@ MEDIA QUERIES
     .main-content .card-list {
         gap: var(--gap-sm);
     }
+
     /* ridimensiono larghezza delle cards per farcene stare 4 */
     .main-content .card {
         min-width: calc((100% - (3 * var(--gap-sm))) / 4);
@@ -638,6 +648,7 @@ MEDIA QUERIES
     .main-content .card-list {
         gap: var(--gap-sm);
     }
+
     /* ridimensiono larghezza delle cards per farcene stare 2 */
     .main-content .card {
         width: calc((100% - var(--gap-sm)) / 2);
@@ -755,6 +766,7 @@ MEDIA QUERIES
     main .header {
         display: none;
     }
+
     /* FOOTER */
     /* left */
     .left .icons {
@@ -779,9 +791,10 @@ MEDIA QUERIES
 }
 
 @media screen and (max-height: 170px) {
+
     /* MAIN HEADER */
     main .header {
         display: none;
     }
-    
+
 }
